<resources>
    <string name="app_name">企业微信助手</string>
    <string name="alert_title">注意</string>
    <string name="cancel">取消</string>
    <string name="sure">确认</string>
    <string name="sdcard_warning">您必须同意存储权限,否则app将无法运行</string>
    <string name="sms_warning">您必须同意获取短信权限,否则app将无法运行</string>
    <string name="location_warning">您必须同意定位权限,否则app将无法运行</string>
    <string name="homepage">首页</string>
    <string name="history">历史</string>
    <string name="mine">我的</string>
    <string name="input_hint">公司位置(默认当前位置)</string>
    <string name="input_button_str">搜索</string>
    <string name="not_install_app_content">&#160;&#160;&#160;&#160;您还没有安装企业微信APP,请先前往应用市场下载</string>
    <string name="not_install_install_now">立刻安装</string>
    <string name="not_install_install_later">稍后再说</string>
    <string name="set_company_location_content">&#160;&#160;&#160;&#160;您还没有确认公司位置,请先设置公司位置</string>
    <string name="set_company_location_now">立刻设置</string>
    <string name="set_company_location_later">稍后再说</string>
    <string name="need_input_search_value">请先输入搜索位置</string>
    <string name="need_replace_search_value">请更换搜索位置</string>
    <string name="pre_ensure_company_location">您确认设置\n</string>
    <string name="post_ensure_company_location">\n作为公司地址吗?</string>
    <string name="information_setting">信息配置</string>
    <string name="login_setting">设置登录方式</string>
    <string name="phonenum_login">手机号码登录(推荐登录方式)</string>
    <string name="wx_login">微信号码登录</string>
    <string name="check_in_setting">打卡设置</string>
    <string name="simulate_test">模拟测试</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="about_us">关于我们</string>
    <string name="set_login_phonenum">设置登录手机号码</string>
    <string name="set_def_phonenum">请输入您的手机号码</string>
    <string name="input_right_phonenum">请输入正确的手机号码</string>
    <string name="ensure_setting_phonenum">您确定要设置 \n</string>
    <string name="as_your_account">\n 作为您的登录手机号</string>
    <string name="work_cycle_1">965\n(朝九晚六 一周工作五天)</string>
    <string name="work_cycle_2">966\n(朝九晚六 一周工作六天)</string>
    <string name="work_cycle_3">996\n(朝九晚九 一周工作六天)</string>
    <string name="work_cycle_4">自定义\n(自定义您的工作时间)</string>
    <string name="set_def_wxaccount">请输入您的微信号码</string>
    <string name="set_def_wxpassword">请输入您的微信密码</string>
    <string name="remember_password">记住密码</string>
    <string name="register">注册</string>
    <string name="user_policy">我已阅读并同意《企业微信助手用户协议》、《隐私政策》,并授权企业微信助手使用该企业微信助手账号信息(如昵称、头像、收货地址)进行统一管理</string>
    <string name="re_rend_message">重发短信(x)</string>
    <string name="second">秒</string>
    <string name="login">登录</string>
    <string name="input_correct_phonenum">请输入正确的手机号码</string>
    <string name="input_phonenum">请输入手机号</string>
    <string name="input_correct_verify_code">请输入正确的验证码</string>
    <string name="input_verify_code">请输入六位验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="re_input_password">请确认密码</string>
    <string name="re_ensure_password">请确认两次输入密码是否一致</string>
    <string name="password_length_err">请输入8~16位密码</string>
    <string name="password_no_character_err">请输入至少一个英文字符</string>
    <string name="password_no_number_err">请输入至少两个数字</string>
    <string name="version_name">版本号: </string>
    <string name="reset_password">重置密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_now">立即注册</string>
    <string name="no_prepare">未就绪</string>
    <string name="prepare">已就绪</string>
    <string name="no_running">未运行</string>
    <string name="running">运行</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="exit_app">再按一次退出程序</string>
    //网络
    <string name="get_sms_succ">短信下发成功,请注意查收</string>
    <string name="web_err">网络异常,请稍后再试!</string>
    <string name="no_more_data">暂无数据</string>
    //设置
    <string name="header">头像</string>
    <string name="nickName">昵称</string>
    <string name="sexual">性别</string>
    <string name="telephoneNum">手机号码</string>
    <string name="lonALat">经纬度</string>
    //历史记录
    <string name="ticksuccess">打卡成功</string>
    <string name="historysearch">查询记录</string>
    <string name="startAndEndTime">起止时间</string>
    <string name="startTime">开始时间</string>
    <string name="endTime">结束时间</string>
    <string name="statusChoose">状态选择</string>
    <string name="allStatus">所有状态</string>
    <string name="succStatus">成功状态</string>
    <string name="failStatus">失败状态</string>
    <string name="chooseTime">请选择时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
</resources>